--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <div class="footer" id="footer">
-            <p>Ⓒ 2023 <span>EDU Team</span>  all rights reserved </p>
+            <p>Ⓒ <span class="year"></span> <span>EDU Team</span>  all rights reserved </p>
             <br>
             <p>contributed in this project:</p>
             <ul>
